add jei support for neoforge