@@ -23,19 +23,27 @@ import java.util.List;
 
 public class WorkbenchRecipeCategory implements IRecipeCategory<PortalGunWorkbenchRecipe> {
     public static final ResourceLocation UID = PGHelper.id("workbench");
+    public static final ResourceLocation CRAFT_BG = PGHelper.id("textures/gui/workbench/crafting_jei.png");
     public static final IRecipeType<PortalGunWorkbenchRecipe> TYPE = IRecipeType.create(UID, PortalGunWorkbenchRecipe.class);
     private final IDrawable icon;
+    private final IDrawable bg;
     private final IDrawableAnimated arrow;
 
     public WorkbenchRecipeCategory(IGuiHelper helper) {
         helper.createDrawable(WorkbenchCraftingScreen.CRAFT_BG, 0, 0, 124, 95);
         this.icon = helper.createDrawableIngredient(VanillaTypes.ITEM_STACK, PGBlocks.GUN_WORKBENCH.asItem().getDefaultInstance());
-        this.arrow = helper.createAnimatedDrawable(helper.createDrawable(WorkbenchCraftingScreen.CRAFT_BG, 0, 223, 66, 33),
+        this.bg = helper.createDrawable(CRAFT_BG, 0, 0, 90, 97);
+        this.arrow = helper.createAnimatedDrawable(helper.createDrawable(WorkbenchCraftingScreen.CRAFT_BG, 222, 210, 34, 46),
                 400, IDrawableAnimated.StartDirection.TOP, false);
     }
 
     public void draw(PortalGunWorkbenchRecipe recipe, IRecipeSlotsView recipeSlotsView, GuiGraphics guiGraphics, double mouseX, double mouseY) {
-        this.arrow.draw(guiGraphics, 11, 31);
+        this.arrow.draw(guiGraphics, 28, 19);
+    }
+
+    @SuppressWarnings("removal")
+    public IDrawable getBackground() {
+        return bg;
     }
 
     @Override
@@ -56,11 +64,21 @@ public class WorkbenchRecipeCategory implements IRecipeCategory<PortalGunWorkben
     @Override
     public void setRecipe(IRecipeLayoutBuilder builder, PortalGunWorkbenchRecipe recipe, IFocusGroup focuses) {
         List<ItemStack> ingredients = recipe.getInputs();
-        builder.addSlot(RecipeIngredientRole.INPUT, 6, 13).add(ingredients.get(0).isEmpty() ? ItemStack.EMPTY : ingredients.get(0));
-        builder.addSlot(RecipeIngredientRole.INPUT, 36, 13).add(ingredients.get(1).isEmpty() ? ItemStack.EMPTY : ingredients.get(1));
-        builder.addSlot(RecipeIngredientRole.INPUT, 66, 13).add(ingredients.get(2).isEmpty() ? ItemStack.EMPTY : ingredients.get(2));
-        builder.addSlot(RecipeIngredientRole.INPUT, 96, 13).add(ingredients.get(3).isEmpty() ? ItemStack.EMPTY : ingredients.get(3));
+        int size = ingredients.size();
+        if (!ingredients.isEmpty()) {
+            builder.addSlot(RecipeIngredientRole.INPUT, 11, 14).add(ingredients.getFirst().isEmpty() ? ItemStack.EMPTY : ingredients.getFirst());
 
-         builder.addSlot(RecipeIngredientRole.OUTPUT, 36, 66).add(recipe.getResult());
+            if (size > 1) {
+                builder.addSlot(RecipeIngredientRole.INPUT, 63, 14).add(ingredients.get(1).isEmpty() ? ItemStack.EMPTY : ingredients.get(1));
+            }
+            if (size > 2) {
+                builder.addSlot(RecipeIngredientRole.INPUT, 11, 37).add(ingredients.get(2).isEmpty() ? ItemStack.EMPTY : ingredients.get(2));
+            }
+            if (size > 3) {
+                builder.addSlot(RecipeIngredientRole.INPUT, 63, 37).add(ingredients.get(3).isEmpty() ? ItemStack.EMPTY : ingredients.get(3));
+            }
+
+            builder.addSlot(RecipeIngredientRole.OUTPUT, 37, 67).add(recipe.getResult());
+        }
     }
 }
